

import com.example.protobuff.Employee;
import com.example.protobuff.EmployeeList;

public class EmployeeMain {


    Employee.PhoneNumber check(String phoneNumber,String phoneType)
    {
        Employee.PhoneNumber.Builder phoneNumber1 = Employee.PhoneNumber.newBuilder();
        phoneNumber1.setNumber(phoneNumber);


        System.out.println();



    }


    public static void main(String[] args) {

        EmployeeList.Builder employeeList = EmployeeList.newBuilder();



    }
}
